# RefugeeConnect2

./: .env.example  .gitignore  README .md  README.md  docker-compose.yml  pyproject.toml
api_app/: .dockerignore  Dockerfile.api  IA_api.py  api_app.env.example  config.py  requirements.txt
api_app/agents/: __init__.py  agent.py  agent_manager.py  tracing_plugin.py
common/data/: branch_services.csv  branches.csv  languages_served.csv  organizations.csv  refugeeconnect.db  schema.sql  services.csv  sqlite_sequence.csv
common/tests/: test_backend_logic1.py  test_backend_logic2.py  test_utils.py
common/utils/: logger.py  tools.py
dash_app/: .dockerignore  Dockerfile.dash  TRANSLATIONS.json  app.py  requirements.txt
